--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
+
 <html>
   <head>
     <title>node.js http server</title>
   </head>
   <body>
 
-    <h1>Serving up static files like they were turtles strapped to rockets.</h1>
+    <h1> <a href="file:///Users/osx/ux-http-server/public/kenzie/welcome.html"> Go to the welcome Page! </a> </h1>
 
-    <img src="./img/turtle.png"/>
+    <img src="./img/oh-gosh.png"/>
   </body>
 </html>
 
